rust/macros/tests/compile-fail/invalid_field.rs
#![feature(plugin)]
#![plugin(flatbuffers_macros)]

extern crate flatbuffers_macros;

flatbuffers_object!{Table => Monster [//~ Error: Invalid field definition
    field
]}


fn main() {}
